Coverity analysis defect 120994: Parse warning

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding 2021-11-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/s/transaction_coordinator.h:118: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 120994 type qualifier on return type is meaningless

            Assignee:
            Sanika Phanse (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: