SERVER-60810 Coverity analysis defect 120994: Parse warning